# doki-theme-jupyter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  devNotes.txt  index.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
albums/: screenshot_album.md
buildSrc/: buildInstallThemes.sh  package.json
buildSrc/assets/templates/: theme.less.template
buildSrc/assets/themes/azurLane/essex/dark/: essex.dark.jupyter.definition.json
buildSrc/assets/themes/blendS/maika/dark/: maika.dark.jupyter.definition.json
buildSrc/assets/themes/killLaKill/ryuko/: ryuko.jupyter.definition.json
buildSrc/assets/themes/miscellaneous/miku/: miku.jupyter.definition.json
buildSrc/assets/themes/reZero/beatrice/: beatrice.jupyter.definition.json
buildSrc/assets/themes/reZero/ram/: ram.jupyter.definition.json
buildSrc/assets/themes/reZero/rem/: rem.jupyter.definition.json
buildSrc/src/: BuildThemes.ts  GroupMappings.ts  MassModifier.ts  types.ts
dokitheme/: __main__.py  argument_suggestion.py  arguments.py  constants.py  decorator.py  file_system_tools.py  plotter_decorator.py  theme_installer.py  theme_janitor.py  theme_manager.py
dokitheme/styles/: base.less
src/dokitheme/: arguments.py  decorator.py  file_system_tools.py  theme_janitor.py
src/dokithemejupyter/: __init__.py  __main__.py  argument_suggestion.py  arguments.py  constants.py  decorator.py  file_system_tools.py  theme_installer.py  theme_janitor.py  theme_manager.py
src/dokithemejupyter/styles/: background.less  base.less  sticker.less
(+41 files in other folders)
